tests/smt2/error/named_assert_and_check_sat_assuming.smt2
(declare-const a_bool Bool)
(declare-const b_bool Bool)
(declare-const c_bool Bool)
(assert (! a_bool :named a))
(assert (! (not b_bool) :named nb))
(check-sat-assuming ((xor a_bool b_bool c_bool)) c_bool)
(get-model)
(check-sat-assuming ((and a_bool b_bool c_bool) c_bool))
(get-unsat-core)
(get-unsat-assumptions)